--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,6 @@
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
-
-.show {
-    display: inline;
-}
-
-select {
-    display: none;
-} */
 
 .from-to-sections {
     margin: 0 -8px 8px;
